# ngitd-core

./: .gitignore  Cargo.toml  README.md  SPEC.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/ngit-cli/: Cargo.toml
crates/ngit-cli/src/: main.rs
crates/ngit-cli/tests/: cli_smoke.rs
crates/ngit-core/: Cargo.toml
crates/ngit-core/src/: lib.rs
crates/ngit-serve/: Cargo.toml
crates/ngit-serve/src/: lib.rs
crates/ngit-tui/: Cargo.toml
crates/ngit-tui/src/: lib.rs
docs/: release-readiness-review.md  walkthrough.mdx
walkthrough-preview/: README.md  next.config.js  package-lock.json  package.json  styles.css
walkthrough-preview/pages/: _app.jsx  index.jsx
