[workspace]
members = [
  "crates/ngit-core",
  "crates/ngit-cli",
  "crates/ngit-tui",
  "crates/ngit-serve",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
rand = "0.10.1"
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing"] }
