[package]
name = "ngit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
rand.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
